# TradingAgents-CN

./: .dockerignore  .env  .env.docker  .env.example  .gitattributes  .gitignore  .project-config  ACKNOWLEDGMENTS.md  ANOMALY_MONITORING_US_STOCKS_UPDATE.md  ANOMALY_TEST_CACHE_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE_TEMPLATE.md  CONTRIBUTORS.md  COPYRIGHT.md  DOCKER_LOGS_GUIDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  LICENSING.md  PERMISSION_FIX_SUMMARY.md  QUICKSTART.md  QUICKSTART_v1.0.0.md  README.md  README_ANOMALY_MONITORING.md  README_USER_AUTH.md  USER_ROLES_GUIDE.md  Wanye记录.md  basic_import_test.py  check_dependencies.py  compose.yml  create_enhanced_comprehensive_analysis.py  debug_user_token.py  demo_collaboration_system.py  demo_imperial_wrapper.py  demo_phase_4h_h1_collision_engine.py  demo_three_core_roles.py  docker-compose.hub.nginx.arm.yml  docker-compose.hub.nginx.yml  (+37 more)
.claude/: settings.local.json
.clinerules/: mcp-interactive-feedback-rule.md
.github/: pull_request_template.md
.streamlit/: config.toml
app/: LICENSE  __main__.py  main.py  worker.py
backtest_system/: __init__.py
cli/: __init__.py  akshare_init.py  baostock_init.py  main.py  models.py  tushare_init.py  utils.py
config/: README.md  logging.toml  logging_docker.toml  models.json  pricing.json  settings.json
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.hub.nginx.arm.yml  docker-compose.hub.nginx.yml  docker-compose.yml  mongo-init.js  nginx.conf
docs/: ANALYST_DATA_CONFIGURATION.md  API_KEY_MANAGEMENT_ANALYSIS.md  API_KEY_TESTING_GUIDE.md  BUILD_GUIDE.md  CONFIG_VALIDATION_FIX_SUMMARY.md  DOCKER_REGISTRY_STRATEGY.md  ENHANCED_HISTORY_FEATURES_SUMMARY.md  GITHUB_BRANCH_PROTECTION.md  INDEX.md  LLM_ADAPTER_TEMPLATE.py  MEMORY_MODEL_PROVIDER_SWITCH_FIX.md  MODEL_RECOMMENDATION_UI_UPDATE.md  PROJECT_ARCHITECTURE.md  PROJECT_AUDIT_REPORT_2026-01-18.md  QUICK_BUILD_REFERENCE.md  QUICK_START.md  README.md  SETTINGS_MERGE.md  SILICONFLOW_SETUP_GUIDE.md  STRUCTURE.md  WINDOWS_INSTALLER_OPTIMIZATION.md  auth_migration_guide.md  database_setup.md  docker-multiarch-build.md  docker-report-export.md  error-handling-improvement.md  frontend-auth-optimization.md  google-ai-base-url-support.md  import_config_with_script.md  installation-mirror.md  mcp_configuration.md  (+5 more)
(+2249 files in other folders)
