[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "chainlit>=1.1.402",
    "chromadb>=0.5.23",
    "eodhd>=1.0.32",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "langchain-anthropic>=0.1.23",
    "langchain-experimental>=0.0.65",
    "langchain-openai>=0.1.25",
    "pandas>=2.0.3",
    "parsel>=1.9.1",
    "praw>=7.8.1",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "setuptools>=75.3.2",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.13.2",
    "yfinance>=0.2.63",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pytdx>=1.72",
    "pymongo>=4.6.1",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]
