[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.1.13-preview"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare",
    "backtrader",
    "baostock",
    "chainlit",
    "chromadb",
    "dashscope",
    "eodhd",
    "feedparser",
    "finnhub-python",
    "google-genai>=0.1.0",
    "google-generativeai>=0.8.0",
    "langchain-anthropic",
    "langchain-experimental",
    "langchain-google-genai",
    "langchain-openai>=0.1.0",
    "langgraph",
    "markdown>=3.4.0",
    "openai>=1.0.0,<2.0.0",
    "pandas",
    "parsel",
    "plotly",
    "praw",
    "psutil",
    "pymongo",
    "pypandoc>=1.11",
    "python-dotenv>=1.0.0",
    "pytdx",
    "pytz",
    "questionary",
    "redis",
    "requests",
    "rich",
    "setuptools",
    "stockstats",
    "streamlit",
    "tqdm",
    "tushare",
    "typing-extensions",
    "yfinance",
]

[project.optional-dependencies]
qianfan = ["qianfan<=0.4.12.3"]

[project.scripts]
tradingagents = "main:main"

[tool.setuptools.packages.find]
include = ["tradingagents*"]
exclude = ["tests*", "docs*", "scripts*", "data*", "logs*", "reports*", "results*", "eval_results*", "upstream_contribution*"]
